DOC: Close open lists after processing inline/floating objects.

BUG:267082